.feedback Fixed the distortion of the airplane

--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -25,6 +25,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 36px;
+  position: relative;
 
   @include vp-1023 {
     display: flex;
@@ -109,12 +110,24 @@
 .feedback__picture {
   display: flex;
   justify-content: flex-end;
+  position: absolute;
   grid-column: 1;
   grid-row: 2 / 5;
   order: 1;
-  margin-top: 15px;
-  margin-right: 84px;
-  margin-bottom: 52px;
+  top: 15px;
+  left: 310px;
+
+  @media (max-width: 1750px) {
+    left: 200px;
+  }
+
+  @media (max-width: 1600px) {
+    left: 100px;
+  }
+
+  @media (max-width: 1300px) {
+    left: 0;
+  }
 
   @include vp-1023 {
     display: none;
